[gd_scene load_steps=12 format=2]

[ext_resource path="res://Stage.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://tilemap_packed.png" type="Texture" id=4]
[ext_resource path="res://Timer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.9775, 30.3682 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 1.46689, 15.7198, 0.336349, 4.09135, 3.72797, 0.376724, 15.6794, 0.376724, 15.6794, 2.79932, 6.15055, 3.28383, 3.08195, 5.70641 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 3.49384, 0, 3.49384 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 13.3635, 12.1868, 16.1091, 12.1868, 16, 16, 12.879, 15.9015 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=5]
0/name = "tilemap_packed.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilemap_packed.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilemap_packed.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 80, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilemap_packed.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "tilemap_packed.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 144, 112, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"Persist",
]]
position = Vector2( 137.683, 135.373 )
scale = Vector2( 0.64, 0.64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
rotation = 1.57397
z_index = 4
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327685, 0, 0, 327686, 536870913, 0, 327687, 1, 0, 327688, 536870913, 0, 327689, 536870913, 0, 327690, 536870913, 0, 327691, 536870913, 0, 327692, 536870913, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327712, 1, 0, 327713, 1, 0, 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 327718, 1, 0, 393221, -2147483647, 0, 393222, 1073741827, 0, 393223, 1073741827, 0, 393224, 1073741827, 0, 393225, 1073741827, 0, 393226, 1073741827, 0, 393227, 1073741827, 0, 393228, 1073741827, 0, 393229, 1073741827, 0, 393230, 1073741827, 0, 393231, 1073741827, 0, 393232, 1073741827, 0, 393233, 3, 0, 393234, 1073741827, 0, 393235, 1073741827, 0, 393236, 1073741827, 0, 393237, 1073741827, 0, 393238, 1073741827, 0, 393239, 1073741827, 0, 393240, 1073741827, 0, 393241, 1073741827, 0, 393242, 1073741827, 0, 393243, 1073741827, 0, 393244, 1073741827, 0, 393245, 1073741827, 0, 393246, 1073741827, 0, 393247, 1073741827, 0, 393248, 1073741827, 0, 393249, 1073741827, 0, 393250, 1073741827, 0, 393251, 1073741827, 0, 393252, 1073741827, 0, 393253, 1073741827, 0, 393254, 1073741827, 0, 458757, -2147483647, 0, 458758, 1073741827, 0, 458759, 1073741827, 0, 458760, 1073741827, 0, 458761, 1073741827, 0, 458762, 1073741827, 0, 458763, 1073741827, 0, 458764, 1073741827, 0, 458765, 1073741827, 0, 458766, 1073741827, 0, 458767, 1073741827, 0, 458768, 1073741827, 0, 458769, 3, 0, 458770, 1073741827, 0, 458771, 1073741827, 0, 458772, 1073741827, 0, 458773, 1073741827, 0, 458774, 1073741827, 0, 458775, 1073741827, 0, 458776, 1073741827, 0, 458777, 1073741827, 0, 458778, 1073741827, 0, 458779, 1073741827, 0, 458780, 1073741827, 0, 458781, 1073741827, 0, 458782, 1073741827, 0, 458783, 1073741827, 0, 458784, 1073741827, 0, 458785, 1073741827, 0, 458786, 1073741827, 0, 458787, 1073741827, 0, 458788, 1073741827, 0, 458789, 1073741827, 0, 458790, 1073741827, 0, 524293, -2147483647, 0, 524294, 1073741827, 0, 524295, 1073741827, 0, 524296, 1073741827, 0, 524297, 1073741827, 0, 524298, 1073741827, 0, 524299, 1073741827, 0, 524300, 1073741827, 0, 524301, 1073741827, 0, 524302, 1073741827, 0, 524303, 1073741827, 0, 524304, 1073741827, 0, 524305, 3, 0, 524306, 1073741827, 0, 524307, 1073741827, 0, 524308, 1073741827, 0, 524309, 1073741827, 0, 524310, 1073741827, 0, 524311, 1073741827, 0, 524312, 1073741827, 0, 524313, 1073741827, 0, 524314, 1073741827, 0, 524315, 1073741827, 0, 524316, 1073741827, 0, 524317, 1073741827, 0, 524318, 1073741827, 0, 524319, 1073741827, 0, 524320, 1073741827, 0, 524321, 1073741827, 0, 524322, 1073741827, 0, 524323, 1073741827, 0, 524324, 1073741827, 0, 524325, 1073741827, 0, 524326, 1073741827, 0, 589829, -2147483647, 0, 589830, 1073741827, 0, 589831, 1073741827, 0, 589832, 1073741827, 0, 589833, 1073741827, 0, 589834, 1073741827, 0, 589835, 1073741827, 0, 589836, 1073741827, 0, 589837, 1073741827, 0, 589838, 1073741827, 0, 589839, 1073741827, 0, 589840, 1073741827, 0, 589841, 3, 0, 589842, 1073741827, 0, 589843, 1073741827, 0, 589844, 1073741827, 0, 589845, 1073741827, 0, 589846, 1073741827, 0, 589847, 1073741827, 0, 589848, 1073741827, 0, 589849, 1073741827, 0, 589850, 1073741827, 0, 589851, 1073741827, 0, 589852, 1073741827, 0, 589853, 1073741827, 0, 589854, 1073741827, 0, 589855, 1073741827, 0, 589856, 1073741827, 0, 589857, 1073741827, 0, 589858, 1073741827, 0, 589859, 1073741827, 0, 589860, 1073741827, 0, 589861, 1073741827, 0, 589862, 1073741827, 0, 655365, -2147483647, 0, 655366, 1073741827, 0, 655367, 1073741827, 0, 655368, 1073741827, 0, 655369, 1073741827, 0, 655370, 1073741827, 0, 655371, 1073741827, 0, 655372, 1073741827, 0, 655373, 1073741827, 0, 655374, 1073741827, 0, 655375, 1073741827, 0, 655376, 1073741827, 0, 655377, 3, 0, 655378, 1073741827, 0, 655379, 1073741827, 0, 655380, 1073741827, 0, 655381, 1073741827, 0, 655382, 1073741827, 0, 655383, 1073741827, 0, 655384, 1073741827, 0, 655385, 1073741827, 0, 655386, 1073741827, 0, 655387, 1073741827, 0, 655388, 1073741827, 0, 655389, 1073741827, 0, 655390, 1073741827, 0, 655391, 1073741827, 0, 655392, 1073741827, 0, 655393, 1073741827, 0, 655394, 1073741827, 0, 655395, 1073741827, 0, 655396, 1073741827, 0, 655397, 1073741827, 0, 655398, 1073741827, 0, 720901, -2147483647, 0, 720902, 1073741827, 0, 720903, 1073741827, 0, 720904, 1073741827, 0, 720905, 1073741827, 0, 720906, 1073741827, 0, 720907, 1073741827, 0, 720908, 1073741827, 0, 720909, 1073741827, 0, 720910, 1073741827, 0, 720911, 1073741827, 0, 720912, 1073741827, 0, 720913, 3, 0, 720914, 1073741827, 0, 720915, 1073741827, 0, 720916, 1073741827, 0, 720917, 1073741827, 0, 720918, 1073741827, 0, 720919, 1073741827, 0, 720920, 1073741827, 0, 720921, 1073741827, 0, 720922, 1073741827, 0, 720923, 1073741827, 0, 720924, 1073741827, 0, 720925, 1073741827, 0, 720926, 1073741827, 0, 720927, 1073741827, 0, 720928, 1073741827, 0, 720929, 1073741827, 0, 720930, 1073741827, 0, 720931, 1073741827, 0, 720932, 1073741827, 0, 720933, 1073741827, 0, 720934, 1073741827, 0, 786437, -2147483647, 0, 786438, 1073741827, 0, 786439, 1073741827, 0, 786440, 1073741827, 0, 786441, 1073741827, 0, 786442, 1073741827, 0, 786443, 1073741827, 0, 786444, 1073741827, 0, 786445, 1073741827, 0, 786446, 1073741827, 0, 786447, 1073741827, 0, 786448, 1073741827, 0, 786449, 3, 0, 786450, 1073741827, 0, 786451, 1073741827, 0, 786452, 1073741827, 0, 786453, 1073741827, 0, 786454, 1073741827, 0, 786455, 1073741827, 0, 786456, 1073741827, 0, 786457, 1073741827, 0, 786458, 1073741827, 0, 786459, 1073741827, 0, 786460, 1073741827, 0, 786461, 1073741827, 0, 786462, 1073741827, 0, 786463, 1073741827, 0, 786464, 1073741827, 0, 786465, 1073741827, 0, 786466, 1073741827, 0, 786467, 1073741827, 0, 786468, 1073741827, 0, 786469, 1073741827, 0, 786470, 1073741827, 0, 851973, -2147483647, 0, 851974, 1073741827, 0, 851975, 1073741827, 0, 851976, 1073741827, 0, 851977, 1073741827, 0, 851978, 1073741827, 0, 851979, 1073741827, 0, 851980, 1073741827, 0, 851981, 1073741827, 0, 851982, 1073741827, 0, 851983, 1073741827, 0, 851984, 1073741827, 0, 851985, 3, 0, 851986, 3, 0, 851987, 1073741827, 0, 851988, 1073741827, 0, 851989, 1073741827, 0, 851990, 1073741827, 0, 851991, 1073741827, 0, 851992, 1073741827, 0, 851993, 1073741827, 0, 851994, 1073741827, 0, 851995, 1073741827, 0, 851996, 1073741827, 0, 851997, 1073741825, 0, 851998, 1073741825, 0, 851999, 1073741825, 0, 852000, 1073741825, 0, 852001, 1073741825, 0, 852002, 1073741825, 0, 852003, 1073741825, 0, 852004, 1073741825, 0, 852005, 1073741825, 0, 852006, 1073741825, 0, 917509, -2147483647, 0, 917510, 1073741827, 0, 917511, 1073741827, 0, 917512, 1073741827, 0, 917513, 1073741827, 0, 917514, 1073741827, 0, 917515, 1073741827, 0, 917516, 1073741827, 0, 917517, 1073741827, 0, 917518, 1073741827, 0, 917519, 1073741827, 0, 917520, 1073741827, 0, 917521, 3, 0, 917522, 1073741827, 0, 917523, 1073741827, 0, 917524, 1073741827, 0, 917525, 1073741827, 0, 917526, 1073741827, 0, 917527, 1073741827, 0, 917528, 1073741827, 0, 917529, 1073741827, 0, 917530, 1073741827, 0, 917531, 1073741827, 0, 917532, 1073741827, 0, 983045, 1073741824, 0, 983046, 1073741825, 0, 983047, 1073741825, 0, 983048, 1073741825, 0, 983049, 1073741825, 0, 983050, 1073741825, 0, 983051, 1073741825, 0, 983052, 1073741825, 0, 983053, 1073741825, 0, 983054, 1073741825, 0, 983055, 1073741825, 0, 983056, 1073741825, 0, 983057, 1073741825, 0, 983058, 1073741825, 0, 983059, 1073741825, 0, 983060, 1073741825, 0, 983061, 1073741825, 0, 983062, 1073741825, 0, 983063, 1073741825, 0, 983064, 1073741825, 0, 983065, 1073741825, 0, 983066, 1073741825, 0, 983067, 1073741825, 0, 983068, -536870912, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 76.683
margin_top = 63.373
margin_right = 116.683
margin_bottom = 77.373
[connection signal="start_timer" from="." to="Timer" method="_on_Stage_start_timer"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
